# source-code

./: .dockerignore  .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-BUSL  README.md  deny.toml  ideas.md
.github/workflows/: ci.yml  cla.yml  pages.yml  release.yml
bundle/: README.md  bundle.Dockerfile
bundle/manifests/: agentctl.clusterserviceversion.yaml  agentfleets.agentctl.dev.yaml  agents.agentctl.dev.yaml  mcpserversets.agents.x-k8s.io.yaml
bundle/metadata/: annotations.yaml
charts/agentctl/: Chart.yaml  README.md  values-ghcr.yaml  values.schema.json  values.yaml
contract/: README.md  SPEC.md
contract/schemas/: a2a.methods.json  config.schema.json  env-convention.json  events.schema.json  exit-codes.table.json  management-profile.json  manifest.schema.json  metrics.registry.json  report.schema.json
crates/agent-api/: Cargo.toml
crates/agent-api/src/: lib.rs
crates/agent-contract-client/: Cargo.toml
crates/agent-contract-client/src/: lib.rs
crates/agent-contract-client/tests/: fixtures.rs
crates/agentctl-admission/: Cargo.toml
crates/agentctl-admission/src/: main.rs  metrics.rs
crates/agentctl-apiserver/: Cargo.toml
crates/agentctl-apiserver/src/: main.rs  metrics.rs  na_client.rs
crates/agentctl-cli/: Cargo.toml
crates/agentctl-cli/src/: install.rs  main.rs
crates/agentctl-coordination/: Cargo.toml
crates/agentctl-coordination/src/: attest.rs  db_tls.rs  main.rs  mcp.rs  metrics.rs  mtls.rs  pg_store.rs  store.rs
crates/agentctl-coordination/testdata/: client_scaler.crt  client_wrong_ca.crt  coordination_mtls_ca.crt
crates/agentctl-crdgen/: Cargo.toml
crates/agentctl-crdgen/src/: main.rs
crates/agentctl-e2e/: Cargo.toml
crates/agentctl-e2e/.cargo/: config.toml
crates/agentctl-e2e/src/: contract.rs  host.rs  kube_helpers.rs  lib.rs  prom.rs  results.rs  shell.rs
crates/agentctl-gateway/: Cargo.toml
crates/agentctl-gateway/src/: auth.rs  db_tls.rs  main.rs  metrics.rs  na_client.rs  oidc.rs  signing.rs  store.rs  trusted_proxy.rs
crates/agentctl-gateway/testdata/: client_apisix.crt  client_wrong_ca.crt  pg_ca.crt  trusted_proxy_ca.crt
crates/agentctl-mcpgateway/: Cargo.toml
crates/agentctl-mcpgateway/src/: main.rs
crates/agentctl-modelgateway/: Cargo.toml
crates/agentctl-modelgateway/src/: attest.rs  auth.rs  db_tls.rs  main.rs  metrics.rs  store.rs
crates/agentctl-node-agent/: Cargo.toml
crates/agentctl-node-agent/src/: attest.rs  discovery.rs  infer.rs  lib.rs  metrics.rs  mgmt.rs
crates/agentctl-node-agent/tests/: mock_bridge.rs
crates/agentctl-operator/: Cargo.toml
crates/agentctl-operator/src/: aauth.rs  controller.rs  lease.rs  lib.rs  metrics.rs  netpol.rs  pki.rs  render.rs  serve.rs
crates/agentctl-scaler/: Cargo.toml  build.rs
crates/agentctl-scaler/proto/: externalscaler.proto
crates/agentctl-scaler/src/: client.rs  main.rs  metrics.rs  pb.rs  scaler.rs
crates/agentctl-telemetry/: Cargo.toml
crates/agentctl-telemetry/src/: lib.rs
crates/mock-agent/: Cargo.toml
crates/mock-agent/src/: main.rs
deploy/: README.md
deploy/admission/: Dockerfile  deployment.yaml  install.sh  rbac.yaml  webhook.yaml
deploy/apiserver/: Dockerfile  apiservice.yaml  deployment.yaml  install.sh  rbac.yaml
deploy/coordination/: Dockerfile
deploy/crds/: agent.yaml  agentfleet.yaml  mcpserverset.yaml  modelpool.yaml
deploy/examples/: agent-aauth.yaml  agent-mock.yaml  agent-once.yaml  agentfleet-claim.yaml  agentfleet-mock.yaml  mock-aauth-mcp.Dockerfile  mock-agent.Dockerfile  mock-provider.yaml  modelpool-mock.yaml  webhook-sink.yaml
deploy/gateway/: Dockerfile  deployment.yaml  rbac.yaml  signing-secret.yaml
deploy/hardening/: install-mtls.sh  networkpolicies.yaml
deploy/mcpgateway/: Dockerfile
deploy/modelgateway/: Dockerfile  deployment.yaml  rbac.yaml
deploy/node-agent/: Dockerfile  daemonset.yaml
deploy/operator/: Dockerfile  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
deploy/postgres/: postgres.yaml
deploy/scaler/: Dockerfile
docs/: STATUS.md  api-design.md  architecture.md  benchmarks.md  cloud-native-roadmap.md  operations.md  security.md  use-cases.md
docs/design/: agentctl-architecture-brainstorm.md  mcp-auth-research.md
e2e/: Makefile  images.sh  install.sh  kind-calico.yaml  kind.yaml  up.sh  work-mcp-bridge.Dockerfile
e2e/manifests/: aauth-agent.yaml  agentd-agent.yaml  agentfleet-shard.yaml  apd.yaml  claim-deployment.yaml  mock-aauth-mcp.yaml  mock-provider.yaml  modelpool-budget.yaml  modelpool-mock.yaml
e2e/results/: .gitignore
e2e/values/: aauth.yaml  e2e-base.yaml  sec-apitoken.yaml  sec-coord-attest.yaml  sec-coord-mtls.yaml  sec-mg-attest.yaml  sec-netpol.yaml  sec-oidc.yaml  sec-trustedproxy.yaml  store-postgres.yaml
plugins/: krew-agent.yaml
rfcs/: 0001-stack-and-repo-decision-record.md  0002-substrate-and-transport-abstraction.md  0003-agent-and-agentfleet-crds.md  0004-agentclass-intelligenceservice-mcpserverset.md  0005-crd-versioning-and-conversion.md  0006-operator-reconcile-and-capability-model.md  0007-admission-validation-ladder.md  0008-node-agent-architecture.md  0009-management-access-path-and-rbac.md  0010-observability-and-telemetry-bridge.md  0011-scaling-plane.md  0012-intelligence-plane.md  0013-a2a-gateway-and-task-store.md  0014-agent-mesh-identity.md  0015-security-and-multi-tenancy.md  0016-cli-and-kubectl-plugin.md  0017-release-and-lifecycle.md  0018-codegen-and-contract-conformance.md  0019-mcp-server-registration-identity-and-authentication.md  0020-instruction-source-and-live-delivery.md  0021-contract-2.0-network-substrate-pivot.md  0022-fleet-orchestration.md  0023-aauth-identity-provisioning.md  0024-aauth-delegation-remote-resources.md  0025-harness-tracked-budgets.md  README.md
web/: .gitignore  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  source.config.ts  tsconfig.json
web/app/: globals.css  layout.config.tsx  layout.tsx  page.tsx
web/data/: benchmarks.ts  features.ts  site.ts  usecases.ts
web/lib/: highlight.ts  search-client.ts  source.ts  (+1 more)
(+97 files in other folders)
