# agentctl workspace — the Kubernetes control plane for fleets of conformant agents.
#
# Per agentctl RFC 0001 (stack & repo decision record): Rust for all components,
# the `kube-rs` ecosystem, one Cargo workspace. The data plane is ANY agent that
# conforms to the Agent Control Contract (see `contract/`); `agent` is the
# reference implementation, never a dependency (principle P0).
#
# Crates are added to `members` as they land. The first foundation crate is
# `agent-contract-client` — the typed, hand-written-where-codegen-can't client for
# the contract (agentctl RFC 0018).
[workspace]
resolver = "2"
members = [
    "crates/agent-contract-client",
    "crates/agent-api",
    "crates/agentctl-operator",
    "crates/agentctl-crdgen",
    "crates/agentctl-node-agent",
    "crates/agentctl-cli",
    "crates/mock-agent",
    "crates/agentctl-apiserver",
    "crates/agentctl-gateway",
    "crates/agentctl-modelgateway",
    "crates/agentctl-mcpgateway",
    "crates/agentctl-admission",
    "crates/agentctl-telemetry",
    "crates/agentctl-coordination",
    "crates/agentctl-scaler",
]

# The end-to-end + scale-benchmark harness (agentctl Phase 4) is DELIBERATELY
# excluded from the workspace: it is a cluster-driving tool (kube-rs + kubectl +
# helm shell-outs) whose binaries assert against a live cluster. Keeping it out of
# `[workspace].members` means `cargo test --workspace` never compiles or runs it,
# so the default test run stays hermetic and requires NO cluster. Build it on its
# own with `cargo build` from `crates/agentctl-e2e/` (it resolves as a standalone
# package against this same `[workspace.package]`/path deps via the exclude rule).
exclude = [
    "crates/agentctl-e2e",
]

[workspace.package]
edition = "2021"
rust-version = "1.89"   # resolved deps (enum-ordinalize 1.89, kube 4.0.0 1.88) require it
license = "Apache-2.0"
repository = "https://github.com/AgentCTL-dev/source-code"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Distributed tracing (OTLP) — wired through the shared `agentctl-telemetry`
# crate. The exporter is OTLP/gRPC over tonic with NO TLS feature, so it pulls
# no aws-lc-rs/openssl (stays pure-Rust, no C toolchain — matches the rustls/ring
# stack). The OTLP layer is installed only when `OTEL_EXPORTER_OTLP_ENDPOINT` is
# set; absent it, behaviour is the fmt-only default. Versions resolve cleanly
# with the existing tracing 0.1 / tokio 1 / hyper 1 / http 1 in the lockfile.
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.33"
