[package]
name = "agent-api"
version = "1.2.0"
description = "agentctl CRD types (Agent, AgentFleet, ModelPool, MCPServerSet) as kube-rs CustomResources."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Types only — no client/runtime. `derive` brings kube-derive + kube-core/schema (schemars).
kube = { version = "4", default-features = false, features = ["derive"] }
# kube-core requires a k8s-openapi version feature to be selected somewhere; `latest`
# tracks the newest supported Kubernetes minor. We use it for CRD generation only.
k8s-openapi = { version = "0.28", features = ["latest"] }
schemars = "1"
serde.workspace = true
serde_json.workspace = true
