[package]
name = "agent-contract-client"
version = "0.1.0"
description = "Typed client for the Agent Control Contract (capabilities manifest, surfaces discovery, version negotiation). agentctl RFC 0018."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
