[package]
name = "agent-contract-client"
version = "1.2.0"
description = "Typed client for the Agent Control Contract: the capabilities manifest, surface discovery, and version negotiation."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
