[package]
name = "agentctl-admission"
version = "0.1.0"
description = "agentctl admission plane (RFC 0007): the validating webhook for what CEL can't express — cross-object lookups, policy (image registry allow-list), and the lethal-trifecta override gate. Hand-rolled in Rust (axum + rustls); agentctl is Rust-only."
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"  # control plane — source-available (see LICENSE-BUSL)
repository.workspace = true

[[bin]]
name = "agentctl-admission"
path = "src/main.rs"

[dependencies]
axum = "0.8"
# TLS via rustls with the ring provider (no aws-lc-rs → no C toolchain).
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# kube client for cross-object lookups (does the named ModelPool exist?).
# rustls/ring → no aws-lc-rs, no C toolchain.
kube = { version = "4", default-features = false, features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
# CRD types (ModelPool) for the cross-object existence check.
agent-api = { path = "../agent-api" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
# base64 for the mutating webhook's JSONPatch payload (the AdmissionResponse.patch
# field is a base64-encoded RFC 6902 patch document).
base64 = "0.22"
serde_json.workspace = true
serde = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
