[package]
name = "agentctl-apiserver"
version = "0.1.0"
description = "agentctl aggregated APIServer (RFC 0009): the human management access path. Serves management.agents.x-k8s.io connect verbs with per-verb RBAC + identity, forwarding to the node-agent. Hand-rolled in Rust (axum + rustls)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agentctl-apiserver"
path = "src/main.rs"

[dependencies]
axum = "0.8"
# TLS via rustls with the ring provider (no aws-lc-rs → no C toolchain).
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# kube client for SubjectAccessReview + reading the front-proxy CA. No TLS feature
# clash: kube uses rustls/ring too.
kube = { version = "4", default-features = false, features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
# Minimal HTTP client for the apiserver→node-agent hop (plain HTTP in-cluster;
# no tls feature → no C toolchain). mTLS is a later hardening.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
