[package]
name = "agentctl-apiserver"
version = "1.2.0"
description = "agentctl aggregated APIServer: the management access path. Serves management.agentctl.dev connect verbs with per-verb RBAC, dialing agent pods directly over mTLS. Rust (axum + rustls)."
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"  # control plane — source-available (see LICENSE-BUSL)
repository.workspace = true

[[bin]]
name = "agentctl-apiserver"
path = "src/main.rs"

[dependencies]
axum = "0.8"
# TLS via rustls with the ring provider (no aws-lc-rs → no C toolchain).
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# kube client for SubjectAccessReview + reading the front-proxy CA. No TLS feature
# clash: kube uses rustls/ring too.
kube = { version = "4", default-features = false, features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
# HTTP client for the mTLS hop to agent pods.
# `rustls-tls-manual-roots-no-provider` enables `use_preconfigured_tls` WITHOUT
# pulling a default crypto provider → no aws-lc-rs, no C toolchain. We hand it a
# ring-backed ClientConfig (see src/na_client.rs).
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-manual-roots-no-provider",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde_json.workspace = true
tracing = "0.1"
# Shared tracing init + W3C trace propagation across the mTLS hop to agents. fmt-only
# by default; OTLP export when OTEL_EXPORTER_OTLP_ENDPOINT is set.
agentctl-telemetry = { path = "../agentctl-telemetry" }
