[package]
name = "agentctl-cli"
version = "0.1.0"
description = "agentctl CLI and kubectl-agent plugin: inspect agents over the Kubernetes API and drive their management verbs."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agentctl"
path = "src/main.rs"

[dependencies]
agent-api = { path = "../agent-api" }
clap = { version = "4", features = ["derive"] }
# Default features keep the client (rustls + config); `derive` is for CR typing.
kube = { version = "4", features = ["derive"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
serde_json.workspace = true
