# SPDX-License-Identifier: BUSL-1.1
[package]
name = "agentctl-coordination"
version = "0.1.0"
description = "agentctl reference coordination MCP server (RFC 0011 §3.2): the claim-mode correctness backbone — the single serializing point that makes exactly-one-owner hold across replicas. Serves the frozen work.* tools (claim/renew/ack/release) + the P9 backlog count (work.stats / work://pending) over MCP JSON-RPC. Hand-rolled in Rust (axum). agentctl is Rust-only."
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"  # control plane — source-available (see LICENSE-BUSL)
repository.workspace = true

[[bin]]
name = "agentctl-coordination"
path = "src/main.rs"

[dependencies]
# axum HTTP surface — same version the gateway/node-agent serve on.
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
serde_json.workspace = true
tracing = "0.1"
# OPT-IN attested identity (COORDINATION_ATTEST_IDENTITY, RFC 0015): resolve the
# caller's source IP → pod → identity to bind/verify the lease holder. SAME feature
# set the modelgateway uses — rustls/ring, NO openssl/aws-lc, no C toolchain.
kube = { version = "4", default-features = false, features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
# Durable, HA-capable claim store (the optional Postgres backend behind the
# ClaimStore trait — chosen at startup by COORDINATION_DATABASE_URL/DATABASE_URL;
# absent ⇒ the in-memory default). Same stack the gateway/modelgateway use:
# deadpool pool + tokio-postgres, TLS via tokio-postgres-rustls (rustls/ring →
# no aws-lc-rs, no C toolchain). sslmode=disable → NoTls; sslmode=require →
# the ring connector in db_tls.rs (encrypt-without-verify, like the gateway).
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
tokio-postgres-rustls = { version = "0.14", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# OPTIONAL mTLS listener (COORDINATION_MTLS_ADDR, RFC 0015): a SECOND listener that
# REQUIRES a CA-signed client cert so internal callers (the scaler) authenticate
# with a cert instead of the coarse AGENTCTL_API_TOKEN. SAME ring-only stack the
# gateway's trusted-proxy / node-agent listeners use — no aws-lc-rs, no C toolchain.
rustls-pemfile = "2"
# `tls-rustls-no-provider` keeps it ring-only (the binary installs the ring provider
# when the feature is enabled); the custom acceptor captures the verified peer cert.
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
# The TlsStream type the custom acceptor reads the verified peer cert off of.
tokio-rustls = { version = "0.26", default-features = false }
# `tower::Layer` so the acceptor can inject the captured peer cert as an extension.
tower = { version = "0.5", default-features = false }
# Parse the verified peer cert's CN/SAN for the mTLS allow-list. Pure Rust, no C
# toolchain.
x509-cert = "0.2"
# Shared tracing init: fmt-only by default, OTLP export when
# OTEL_EXPORTER_OTLP_ENDPOINT is set (matches every other control-plane binary).
agentctl-telemetry = { path = "../agentctl-telemetry" }
