[package]
name = "agentctl-gateway"
version = "0.1.0"
description = "agentctl A2A gateway (RFC 0013): the public A2A HTTP/JSON-RPC surface + Agent Card projection, bridging to an agent's A2A-over-the-substrate via the node-agent. Hand-rolled in Rust (axum). agentctl is Rust-only."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agentctl-gateway"
path = "src/main.rs"

[dependencies]
axum = "0.8"
# kube client to resolve {ns,name}→pod→node-agent (same routing as the apiserver).
# rustls/ring → no aws-lc-rs, no C toolchain.
kube = { version = "4", default-features = false, features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
# Minimal HTTP client for the gateway→node-agent hop (plain HTTP in-cluster;
# no tls feature → no C toolchain). `stream` enables `Response::bytes_stream`
# for the SSE passthrough on `message/stream`.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
# CRD types (Agent / AgentFleet) for the mesh discovery registry (GET /agents).
agent-api = { path = "../agent-api" }
# Durable A2A task store (RFC 0013). NoTls in-cluster → pure Rust, no C toolchain.
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Agent Card signing (JWS / EdDSA) + JWKS (RFC 0013). Both pure Rust — no C
# toolchain (keep the gateway image dependency-free of a C compiler).
ed25519-dalek = "2"
base64 = "0.22"
