[package]
name = "agentctl-gateway"
version = "0.1.0"
description = "agentctl A2A gateway (RFC 0013): the public A2A HTTP/JSON-RPC surface + Agent Card projection, bridging to an agent's A2A-over-the-substrate via the node-agent. Hand-rolled in Rust (axum). agentctl is Rust-only."
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"  # control plane — source-available (see LICENSE-BUSL)
repository.workspace = true

[[bin]]
name = "agentctl-gateway"
path = "src/main.rs"

[dependencies]
axum = "0.8"
# kube client to resolve {ns,name}→pod→node-agent (same routing as the apiserver).
# rustls/ring → no aws-lc-rs, no C toolchain.
kube = { version = "4", default-features = false, features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
# HTTP client for the gateway→node-agent hop, now over mTLS (RFC 0015). `stream`
# enables `Response::bytes_stream` for the SSE passthrough on `message/stream`.
# `rustls-tls-manual-roots-no-provider` enables `use_preconfigured_tls` WITHOUT
# pulling a default crypto provider → no aws-lc-rs, no C toolchain. We hand it a
# ring-backed ClientConfig (see src/na_client.rs).
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls-manual-roots-no-provider",
] }
# rustls (ring provider) for the node-agent mTLS ClientConfig + custom verifier.
# ring, never aws-lc-rs → no C toolchain (matches the apiserver).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# CRD types (Agent / AgentFleet) for the mesh discovery registry (GET /agents).
agent-api = { path = "../agent-api" }
# Durable A2A task store (RFC 0013). sslmode=disable → NoTls (default); when the
# DSN asks for TLS (sslmode=require, e.g. bundled postgres.tls.enabled) the store
# wraps the hop with tokio-postgres-rustls. Both pure Rust, no C toolchain.
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
# TLS connector for the Postgres hop. default-features off + `ring` → rustls/ring
# (no aws-lc-rs, no C toolchain — reuses the rustls/ring stack above).
tokio-postgres-rustls = { version = "0.14", default-features = false, features = ["ring"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
serde_json.workspace = true
tracing = "0.1"
# Shared tracing init: fmt-only by default, OTLP export when
# OTEL_EXPORTER_OTLP_ENDPOINT is set.
agentctl-telemetry = { path = "../agentctl-telemetry" }
# Agent Card signing (JWS / EdDSA) + JWKS (RFC 0013). Both pure Rust — no C
# toolchain (keep the gateway image dependency-free of a C compiler).
ed25519-dalek = "2"
base64 = "0.22"
# Constant-time byte comparison for the optional bearer-token access gate
# (avoids a timing side-channel on token compare). Pure Rust, no C toolchain.
subtle = "2"
