[package]
name = "agentctl-gateway"
version = "1.0.0"
description = "agentctl A2A gateway: the public A2A HTTP/JSON-RPC surface with signed Agent Card projection, reaching agents by dialing their pods directly over mTLS. Rust (axum)."
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"  # control plane — source-available (see LICENSE-BUSL)
repository.workspace = true

[[bin]]
name = "agentctl-gateway"
path = "src/main.rs"

[dependencies]
axum = "0.8"
# kube client to resolve {ns,name}→pod (same routing as the apiserver).
# rustls/ring → no aws-lc-rs, no C toolchain.
kube = { version = "4", default-features = false, features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
# HTTP client for the mTLS hop to agent pods. `stream`
# enables `Response::bytes_stream` for the SSE passthrough on `message/stream`.
# `rustls-tls-manual-roots-no-provider` enables `use_preconfigured_tls` WITHOUT
# pulling a default crypto provider → no aws-lc-rs, no C toolchain. We hand it a
# ring-backed ClientConfig (see src/na_client.rs).
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls-manual-roots-no-provider",
] }
# rustls (ring provider) for the agent-dial mTLS ClientConfig + custom verifier.
# ring, never aws-lc-rs → no C toolchain (matches the apiserver).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# TRUSTED-PROXY mode (front-proxy trust over mTLS): a SECOND listener serving
# rustls TLS that REQUIRES a CA-signed client cert, mirroring the agent's
# dual listener. `tls-rustls-no-provider` keeps it ring-only (no aws-lc-rs, no C
# toolchain); the binary installs the ring provider in main().
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
# The TlsStream type the custom acceptor reads the verified peer cert off of.
# default-features off → no aws-lc-rs (rustls/ring is unified across the graph).
tokio-rustls = { version = "0.26", default-features = false }
# `tower::Layer` so the acceptor can inject the captured peer cert as an extension
# (axum's `Extension` is a `Layer`).
tower = { version = "0.5", default-features = false }
# Parse the verified peer cert's CN/SAN for the trusted-proxy allow-list. Pure
# Rust (der/spki), no C toolchain.
x509-cert = "0.2"
# CRD types (Agent / AgentFleet) for the mesh discovery registry (GET /agents).
agent-api = { path = "../agent-api" }
# Durable A2A task store. sslmode=disable → NoTls (default); when the
# DSN asks for TLS (sslmode=require, e.g. bundled postgres.tls.enabled) the store
# wraps the hop with tokio-postgres-rustls. Both pure Rust, no C toolchain.
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
# TLS connector for the Postgres hop. default-features off + `ring` → rustls/ring
# (no aws-lc-rs, no C toolchain — reuses the rustls/ring stack above).
tokio-postgres-rustls = { version = "0.14", default-features = false, features = ["ring"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
serde_json.workspace = true
tracing = "0.1"
# Shared tracing init: fmt-only by default, OTLP export when
# OTEL_EXPORTER_OTLP_ENDPOINT is set.
agentctl-telemetry = { path = "../agentctl-telemetry" }
# Agent Card signing (JWS / EdDSA) + JWKS. Both pure Rust — no C
# toolchain (keep the gateway image dependency-free of a C compiler).
ed25519-dalek = "2"
base64 = "0.22"
# Constant-time byte comparison for the optional bearer-token access gate
# (avoids a timing side-channel on token compare). Pure Rust, no C toolchain.
subtle = "2"
# Per-agent OIDC/JWT verification (native A2A authn/authz). v9 is **ring-backed**
# (no openssl, no aws-lc-rs → no C toolchain), matching the rustls/ring stack. The
# default `use_pem` feature (pem + simple_asn1, both pure Rust) lets the tests mint
# EncodingKeys from PEM; production builds DecodingKeys from JWK components.
jsonwebtoken = "9"
# Mozilla root trust anchors for the JWKS discovery/fetch HTTPS client (public
# OIDC issuers are reached over the open internet — distinct from the internal
# cluster CA used by the mTLS control hop). Pure Rust, no C toolchain.
webpki-roots = "1"
