[package]
name = "agentctl-mcpgateway"
version = "1.2.0"
description = "agentctl MCPGateway: the credential-injecting, attesting, policy-enforcing broker for the tool plane. Agents hold no tool-server secrets; the gateway attests the caller by source IP, scopes it to its bound MCPServerSet, injects the server credential off-pod, and forwards MCP. Rust (axum)."
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"  # control plane — source-available (see LICENSE-BUSL)
repository.workspace = true

[[bin]]
name = "agentctl-mcpgateway"
path = "src/main.rs"

[dependencies]
axum = "0.8"
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
kube = { version = "4", default-features = false, features = ["client", "rustls-tls", "ring"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
agent-api = { path = "../agent-api" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
agentctl-telemetry = { path = "../agentctl-telemetry" }
